0.16
 - S3 Update: Support for S3 Standard - Infrequent Access 

0.15 16 Sep 2015
 - fix unicode issues in test t/10_responses.t (ioanrogers)
 - fix bug handling responses with ArrayRef of Maps (DynamoDB reported by stevecaldwell77)
 - fix S3 to be able to use temporary credentials (stevecaldwell77)
 - fix bug that could produce different timestamps in Date and X-Amz-Date headers (ilmari)
 - Pull Request #53 (karenetheridge): "Update some module dependencies"
   - JSON Parsing now depending on JSON::MaybeXS
   - include META.json in package
   - remove uri_escape code for perl 5.8
 - ElasticBeanstalk API update: support for Instance and Environment health 
 - Codepipeline API update: support for encription key
 - Config API update: ListDiscoveredResources
 - EC2 API update: Resource oriented bidding for spot instances
 - StorageGateway API update: tagging
 - S3 API update: event filtering
 - IAM API update: Policy simulation methods
 - Kinesis API update: Appoximate arrival timestamp on Record object
 - Elastic File System API update
 - Route53: Child and Inverted Health Checks
 - EC2 API update: DataEncryptionKeyId and StateMessage in snapshots. Spot fleet allocation strategy

0.14 06 Aug 2015
 - LWP Caller (Paws::Net::LWPCaller). Paws supports calling behind HTTPS proxies with LWP (dtikhonov)
 - Maps in JSON type APIS are correctly handled (Issue #40 and #45, PR #46). Thanks to vivus-ignis and dtikhonov
 - Fixes to Paws.pm documentation (arc)
 - Glacier API update: support for Vault Locking
 - EMR API update: Support for new Applications specification 
 - EC2 API update:
   - CreateRoute drops the ClientToken param
   - Support for SpotFleetLaunchSpecification
 - CloudWatch Logs API update: Support Destinations
 - RDS API update: Support for Aurora (new DBCluster calls)
 - Opsworks API update: support for RHEL7
 - DeviceFarm API update: support for iOS
 - SimpleWorkflow API update: support for Lambda

0.13 17 Jul 2015
 - New API: DynamoDB Streams